src/index.css
* {
    box-sizing: border-box;
    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial,
        sans-serif;
}

::-webkit-scrollbar {
    width: 15px;
    height: 100%;
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.4);
}

a {
    text-decoration: none;
    color: inherit;
    display: block;
}

html,
body {
    width: 100vw;
    scrollbar-width: none;
    overflow-y: hidden;
}

html,
body,
#root {
    margin: 0;
    padding: 0;

    background: black;
    color: white;

    display: flex;
    align-items: flex-start;
}

